# minibot-rust

./: .env  Cargo.toml  transaction.yaml
byte-string/src/: lib.rs
client/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/future/pipe/: safe_sender.rs
common/src/net/: ws.rs
crates/client/: Cargo.toml
crates/client-cli/: Cargo.toml
crates/client-cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/future/: mod.rs
crates/common/src/net/rpc/: mod.rs
crates/config/: Cargo.toml
crates/config/src/: fmt.rs  lib.rs
crates/db-postgres/: Cargo.toml
crates/db-postgres-async/: Cargo.toml
crates/db-postgres-async/src/: lib.rs
crates/db-postgres/src/: db_handle.rs  lib.rs  pool.rs  user.rs
crates/db-postgres/src/queries/: get_ephemeral_token.sql  mod.rs  remove_expired_ephemeral_tokens.sql
crates/db-sqlite/: Cargo.toml  diesel.toml
crates/db-sqlite/migrations/2020-04-12-074757_initial/: down.sql
crates/db-sqlite/src/: schema.rs
crates/db-testing/: Cargo.toml
crates/db-testing/src/: docker.rs  lib.rs
crates/db-testing/tests/: smoke.rs
crates/docker-proc/: Cargo.toml
crates/docker-proc/src/: lib.rs
crates/docker-process/: Cargo.toml
crates/docker-process/src/: lib.rs
crates/irc/: Cargo.toml
crates/irc-raw/src/: codec.rs  lib.rs
crates/irc/src/connection/: net_stream.rs
crates/irc/src/futures_util/: event_sink.rs  mod.rs
crates/irc/src/room_state/: mod.rs
crates/mq/: Cargo.toml
crates/mq/src/: lib.rs  pool.rs  test.rs
crates/server/: Cargo.toml
crates/server/src/: channels.rs  main.rs
crates/server/src/config/: mod.rs  oauth.rs
crates/server/src/http_server/: mod.rs
crates/server/src/http_server/authn/: handlers.rs  mod.rs
crates/server/src/http_server/middleware/: reqwest.rs
crates/server/src/services/: mod.rs
crates/server/src/services/fake/: token_store.rs
crates/server/src/services/live/: twitch_token.rs
crates/server/src/util/: error.rs
crates/server/src/util/table/: accessor_result.rs  index_store.rs
db-postgres/src/: db_handle.rs
db-postgres/src/queries/: mod.rs
deploy/dev/: Cargo.toml  start.sh
deploy/dev/src/: config.rs  main.rs  migrations.rs
deploy/migrations/: V1__initial.sql
irc/: Cargo.toml
irc-raw/: Cargo.toml
irc-raw/src/: messages.rs  read_bytes.rs
irc/src/: client.rs
irc/src/connection/: mod.rs
minibot-byte-string/: Cargo.toml
minibot-client/: Cargo.toml
minibot-client-cli/: Cargo.toml
minibot-client-cli/src/: main.rs
minibot-client/src/: access_token.rs  lib.rs
minibot-common/: Cargo.toml
minibot-common/src/: commands.rs  lib.rs  proof_key.rs  secure.rs
minibot-common/src/future/: cancel.rs  mod.rs  pipe.rs
minibot-common/src/future/pipe/: cloner.rs
minibot-common/src/net/: mod.rs
minibot-common/src/net/rpc/: broker.rs  mod.rs  msg.rs
minibot-db-postgres/: Cargo.toml  refinery.toml
minibot-db-postgres/src/: db_handle.rs  lib.rs  user.rs
minibot-db-postgres/src/migrations/: V1__initial.sql
minibot-db-postgres/src/queries/: insert_ephemeral_token.sql
minibot-db-sqlite/: .env  Cargo.toml
minibot-db-sqlite/migrations/2020-04-12-074757_initial/: down.sql  up.sql
minibot-db-sqlite/src/: db_handle.rs  lib.rs  model.rs  models.rs  schema.rs
minibot-db-sqlite/src/crud/: user.rs
minibot-irc/: .devsecrets_id.txt  Cargo.toml
minibot-irc-raw/: Cargo.toml
minibot-irc-raw/src/: codec.rs  lib.rs  messages.rs
minibot-irc/examples/: connect_twitch.rs
minibot-irc/src/: byte_string.rs  client.rs  connection.rs  lib.rs  messages.rs  read_bytes.rs  rpc.rs  write_bytes.rs
minibot-irc/src/connection/: irc_codec.rs  irc_sink.rs  irc_stream.rs  mod.rs  net_stream.rs
minibot-irc/src/examples/: connect_twitch.rs
minibot-irc/src/futures_util/: event_sink.rs  mod.rs  simple_sender.rs
minibot-irc/src/room_state/: events.rs  mod.rs  room_state.rs
minibot-server/: Cargo.toml
minibot-server/src/: channels.rs  client_channel.rs  endpoints.rs  filters.rs  handlers.rs  main.rs  reqwest_middleware.rs  services.rs  ws.rs
minibot-server/src/config/: mod.rs  oauth.rs
minibot-server/src/http_server/: channel.rs  endpoints.rs  handlers.rs  mod.rs
minibot-server/src/http_server/authn/: endpoints.rs  handlers.rs  mod.rs
minibot-server/src/http_server/middleware/: authn.rs  mod.rs
minibot-server/src/net/: mod.rs
minibot-server/src/net/rpc/: broker.rs  mod.rs
minibot-server/src/rpc/: mod.rs
minibot-server/src/services/: account.rs  mod.rs  mq.rs  token_service.rs  twitch.rs  twitch_token.rs
minibot-server/src/services/base/: account.rs  mod.rs  token_store.rs
minibot-server/src/services/base/twitch/: throttled_token_source.rs
minibot-server/src/services/fake/: account.rs  mod.rs  mq.rs
minibot-server/src/services/fake/token_service/: mod.rs  serde.rs  table.rs
minibot-server/src/services/live/twitch/: mod.rs  token_source.rs
minibot-server/src/services/mq/: mod.rs
minibot-server/src/services/token_service/: serde.rs  table.rs
minibot-server/src/util/: cancel.rs  error.rs  id.rs  mod.rs  opt_cell.rs
minibot-server/src/util/future/: cancel.rs  mod.rs
minibot-server/src/util/types/: scopes.rs  urlsafe.rs
server/: Cargo.toml
server/src/http_server/authn/: endpoints.rs  handlers.rs
server/src/net/: ws.rs
server/src/services/base/: mod.rs
server/src/services/live/: mod.rs
server/src/util/future/: park.rs
server/src/util/table/: table.rs  table_core.rs
server/src/util/types/: mod.rs  scopes.rs  urlsafe.rs
src/: client.rs  endpoints.rs  filters.rs  handlers.rs  main.rs  services.rs
src/config/: mod.rs  twitch-provider.json
src/services/: account.rs  irc.rs  token_service.rs  twitch.rs  twitch_token.rs
src/services/token_service/: serde.rs  table.rs
src/util/: mod.rs  proof_key.rs  table.rs  types.rs
src/util/table/: accessor_result.rs  error.rs  index_set.rs  index_store.rs  mod.rs  table_core.rs
tools/devtool/: Cargo.toml
tools/devtool/src/: main.rs  migrations.rs
