[package]
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
name = "minibot"
version = "0.1.0"
[dependencies]
anyhow = "*"
async-trait = "*"
serde_derive = "*"
thiserror = "*"
url = "*"
url_serde = "*"
warp = "*"
base64 = "0.11.0"
sodiumoxide = "0.2.5"
reqwest = "0.10.1"
serde_json = "1.0.48"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
features = ["full"]
version = "*"
