[package]
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
name = "minibot"
version = "0.1.0"

[dependencies]
anyhow = "*"
async-trait = "*"
serde_derive = "*"
thiserror = "*"
url = "*"
url_serde = "*"
warp = "*"
base64 = "0.11.0"
sodiumoxide = "0.2.5"
reqwest = "0.10.1"
serde_json = "1.0.48"
xdg = "2.2.0"
devsecrets = { git = "ssh://git@github.com:/naerbnic/devsecrets.git", version = "0.1.0-dev1" }
log = "0.4.8"
env_logger = "0.7.1"
lazy_static = "1.4.0"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
features = ["full"]
version = "*"
