[package]
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
name = "minibot"
version = "0.1.0"

[workspace]
members = ["minibot-irc"]

[dependencies]
anyhow = "*"
async-trait = "*"
serde_derive = "*"
thiserror = "*"
url = "*"
url_serde = "*"
warp = "*"
base64 = "0.11.0"
sodiumoxide = "0.2.5"
reqwest = { version = "0.10.1", features = ["json"] }
serde_json = "1.0.48"
xdg = "2.2.0"
devsecrets = { git = "https://github.com/naerbnic/devsecrets", version = "0.1.0-dev1" }
log = "0.4.8"
env_logger = "0.7.1"
lazy_static = "1.4.0"
futures = "0.3.4"
rand = "0.7.3"
serde_urlencoded = "0.6.1"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
features = ["full"]
version = "*"
