[package]
name = "minibot-common"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
sodiumoxide = "0.2.5"
base64 = "0.11.0"
thiserror = "1.0.14"
futures = "0.3.8"
serde_json = "1.0.59"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0.34"
log = "0.4.11"
tokio-tungstenite = "0.11.0"
