[package]
name = "minibot-client-cli"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minibot-client = { path = "../minibot-client" }
webbrowser = "0.5.2"
tokio = { version = "0.2.16", features = ["macros"] }
reqwest = "0.10.4"
url = "2.1.1"
anyhow = "1.0.28"
clap = "2.33.0"
