[package]
name = "minibot-db-postgres"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.5.3"
r2d2 = "0.8.8"
thiserror = "1.0.15"
refinery = { version = "0.2.1", features = ["tokio-postgres"] }
