[package]
name = "minibot-irc-raw"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
thiserror = "1.0.21"
futures = "0.3.6"
futures_codec = "0.4.1"
