[package]
name = "minibot-irc"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.11"
futures = "0.3.4"
tokio = { version = "0.2.12", features = ["net", "io-util"] }
tokio-tls = "0.3.0"
native-tls = "0.2.3"
tokio-util = { version = "0.3.0", features = ["compat"] }
bytes = "0.5.4"
futures_codec = "0.4.0"
