[package]
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
name = "minibot-server"
version = "0.1.0"

[dependencies]
anyhow = "*"
async-trait = "*"
thiserror = "1.0.14"
url = "*"
url_serde = "*"
base64 = "0.11.0"
sodiumoxide = "0.2.5"
reqwest = { version = "0.10.8", features = ["json"] }
serde_json = "1.0.48"
xdg = "2.2.0"
devsecrets = { git = "https://github.com/naerbnic/devsecrets", version = "0.1.0-dev1" }
log = "0.4.8"
env_logger = "0.7.1"
lazy_static = "1.4.0"
futures = "0.3.4"
rand = "0.7.3"
serde_urlencoded = "0.6.1"
minibot-common = { path = "../minibot-common" }
im = "14.3.0"
gotham = "0.5.0"
gotham_derive = "0.5.0"
fernet = "0.1.3"
tokio-tungstenite = "0.11.0"
sha1 = "0.6.0"
bytes = "0.6.0"
mime = "0.3.16"
clap = "2.33.3"
dotenv = "0.15.0"
envy = "0.4.1"
dirs = "3.0.1"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
features = ["full"]
version = "*"
