[package]
name = "minibot-client"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minibot-common = { path = "../common" }
futures = "0.3.4"
serde = { version = "1.0.117", features = ["derive"] }
url = "2.1.1"
warp = "0.3.3"
thiserror = "1.0.14"
serde_urlencoded = "0.6.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.18.5", features = ["time"] }
tokio-tungstenite = "0.26.1"
serde_json = "1.0.59"
