[package]
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
name = "minibot-db-postgres"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
bb8 = "0.4.1"
bb8-postgres = "0.4.0"
chrono = "0.4.19"
futures = "0.3.4"
postgres = "0.17"
r2d2 = "0.8.9"
r2d2_postgres = "0.16.0"
rand = "0.7.3"
sqlx = {version = "0.4.1", features = ["runtime-tokio-rustls", "postgres", "chrono"]}
thiserror = "1.0.15"
tokio = "0.2"
