[package]
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
name = "minibot-db-postgres"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
bb8 = "0.6.1"
bb8-postgres = "0.6.0"
chrono = "0.4.19"
futures = "0.3.8"
rand = "0.7.3"
thiserror = "1.0.22"
tokio = "0.3.5"
tokio-postgres = {version = "0.6.0", features = ["with-chrono-0_4"]}
