[package]
name = "minibot-db-sqlite"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
async-trait = "0.1.30"
thiserror = "1.0.15"
r2d2 = "0.8.8"
tokio = { version = "0.2.18", features = ["macros", "blocking"] }
diesel_migrations = "1.4.0"

[target.'cfg(windows)'.dependencies]
# Included to ensure on Windows the binary is bundled, instead of having to be linked separately
libsqlite3-sys = { version = "*", features = ["bundled"] }
