[package]
name = "minibot-db-sqlite"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.3", features = ["sqlite", "r2d2"] }
async-trait = "0.1.30"
thiserror = "1.0.15"
r2d2 = "0.8.8"
tokio = { version = "1.18.5", features = ["macros"] }
diesel_migrations = "2.2.0"

[target.'cfg(windows)'.dependencies]
# Included to ensure on Windows the binary is bundled, instead of having to be linked separately
libsqlite3-sys = { version = "0.25.1", features = ["bundled"] }
