[package]
name = "minibot-db-testing"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
log = "0.4.11"
minibot-db-postgres = { path = "../db-postgres" }
nix = "0.19.1"
regex = "1.4.2"
tempdir = "0.3.7"
thiserror = "1.0.22"

[dev-dependencies]
tokio = {version = "0.2", features = ["macros", "signal", "rt-threaded"]}
