[package]
name = "docker-proc"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinky-swear = "5.0.1"
serde = "1.0.118"
serde_json = "1.0.60"
thiserror = "1.0.22"
