[package]
name = "minibot-mq"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
async-trait = "0.1.42"
futures = "0.3.8"
lapin = "2.5"
thiserror = "1.0.23"
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
docker-proc = { path = "../docker-proc" }
tokio = { version = "1.18.5", features = ["full"] }
