[package]
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
name = "minibot-server"
version = "0.1.0"

[dependencies]
anyhow = "*"
async-trait = "*"
base64 = "0.11.0"
bytes = "0.6.0"
dirs = "3.0.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
envy = "0.4.1"
fernet = "0.1.3"
futures = "0.3.4"
gotham = "0.7"
gotham_derive = "0.7"
im = "15"
lazy_static = "1.4.0"
log = "0.4.8"
mime = "0.3.16"
minibot-common = {path = "../common"}
minibot-config = {path = "../config"}
rand = "0.7.3"
reqwest = {version = "0.12", features = ["json"]}
serde_json = "1.0.48"
serde_urlencoded = "0.7"
sha1 = "0.6.0"
sodiumoxide = "0.2.5"
thiserror = "1.0.14"
tokio-tungstenite = "0.26.1"
url = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
features = ["full"]
version = "1.18.5"
