[package]
name = "dev-start"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
env_logger = "0.8.2"
log = "0.4.11"
postgres = "0.17"
refinery = {version = "0.4.0", features = ["postgres"]}
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
shellexpand = "2.0.0"
structopt = "0.3.21"
toml = "0.5.7"
xdg = "2.2.0"
